[package]
name = "console"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.69"
license = "MIT OR Apache-2.0"
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
ewebsock = { path = "./libs/ewebsock/ewebsock", features = ["tls"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["chrono_0_4"]}
eframe = "0.22.0" # Gives us egui, epi and web+native backends
log = "0.4"
serde_json = "1.0.99"
chrono = { version = "0.4.26", features = ["serde"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
