[package]
name = "consumer"
version = "0.2.0"
edition = "2021"
authors = ["mpw <x@mpw.sh>"]
resolver = "2"

[dependencies]
exchange-observer = {path = "../lib", version = "0.1.0"}
log = "0.4"
tokio = { version = "1.28.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time", "io-util"] }
scylla = {version = "0.5.0", features =["ssl"]}
anyhow = "1.0.71"
futures = "0.3.28"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
openssl = "0.10.52"
rand = "0.8.5"
tracing = "0.1.37"
chrono = "0.4"
futures-channel = "0.3"
stream_throttle = "0.4.0"
flate2 = { version = "1.0.26", features = ["zlib"], default-features = false }
serde_json = "1.0"
serde = { version = "1.0.162", features = ["derive"] }
rskafka = "0.2.0"
