[package]
name = "exchange-observer"
version = "0.1.0"
edition = "2021"

[dependencies]
confy = "0.4.0"
serde_derive = "1.0.162"
serde_json = "1.0"
serde = { version = "1.0.162", features = ["derive"] }
log = "0.4"
sha1_smol = "1.0.0"
env_logger = "0.9"
anyhow = "1.0"
sha2 = "0.10.6"
hmac = "0.12.1"
time = { version = "0.3.20", features = ["serde-human-readable", "macros"]}
thiserror = "1.0.40"
base64 = "0.21.0"
secrecy = { version = "0.8", features = ["serde"] }
