[package]
name = "producer"
version = "0.2.0"
edition = "2021"
authors = ["mpw <x@mpw.sh>"]
resolver = "2"

[dependencies]
exchange-observer = {path = "../lib", version = "0.1.0"}
log = "0.4"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"]}
anyhow = "1.0.71"
futures = "0.3.28"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1.37"
chrono = "0.4"
futures-channel = "0.3"
tokio = { version = "1.28.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time", "io-util"] }
url = "2.3.1"
crypto-markets = "1.3.11"
native-tls = "0.2.11"
crypto-market-type = { version = "1.1.5"}
serde_json = "1.0"
reqwest = "0.11.17"
serde = { version = "1.0.162", features = ["derive"] }
rskafka = { version = "0.3.0", features=["lz4"] }
time = "0.3.20"
