[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
authors = ["mpw <x@mpw.sh>"]

[dependencies]
scylla = {version = "0.5.0", features =["ssl"]}
exchange-observer = {path = "../lib", version = "0.1.0"}
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
bigdecimal = "0.2.2"
num-bigint = "0.3"
tracing = "0.1.37"
chrono = "0.4.24"
serde_derive = "1.0.162"
serde_json = "1.0"
serde = { version = "1.0.162", features = ["derive"] }
comfy-table = "6.1.4"
console = "0.15.5"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
futures-util = "0.3.28"
reqwest = { version = "0.11.17", features = ["json"]}
pushover-rs = "0.3.10"
sha1_smol = "1.0.0"
uuid = { version = "1.3.1" , features = ["v4", "serde"] }
